Update mcgui/Tools menu items
git-svn-id: https://svn.mccode.org/svn/McStasTeX@199 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -881,6 +881,9 @@ users have modification rights) and loaded. One may then view its source (Edit) 
 
 \noindent The {\bf Tools} menu gathers minor tools.
 \begin{description}
+\item[Plot current/other results] Plot current simulation results and other results.
+\item[Online plotting of results] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).
+\item[Dataset convert/merge] Opens a GUI to the \verb+mcformat+ tool, in order to convert datasets to other formats, merge scattered dataset (e.g. from successive or grid simulations), and assemble scan sets.
 \item[Shortcut keys] displays the shortcut keys used for running and editing instruments.
 \item[Install DSA key] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).\index{MPI}\index{Grid computing}
 \end{description}
