A word about the Histogrammer in the mcgui Tools menu.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@200 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -886,6 +886,7 @@ users have modification rights) and loaded. One may then view its source (Edit) 
 \item[Dataset convert/merge] Opens a GUI to the \verb+mcformat+ tool, in order to convert datasets to other formats, merge scattered dataset (e.g. from successive or grid simulations), and assemble scan sets.
 \item[Shortcut keys] displays the shortcut keys used for running and editing instruments.
 \item[Install DSA key] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).\index{MPI}\index{Grid computing}
+\item[The Histogrammer] In addition to these tools, the \verb+Neutron site/Tools/Histogrammer.instr+ example instrument may read McStas, Vitess, MCNP and Tripoli event files in order to generate histograms of any type.
 \end{description}
 
 
