Added comments about Neutron site examples both in some components and instrum.tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@201 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/phonon.tex
+++ b/trunk/phonon.tex
@@ -26,6 +26,8 @@ index of a down-stream component, \verb+target_index+.
 
 Multiple scattering is not included in this component.
 
+A usage example of this component can be found in the \verb+Neutron site/tests/Test_Phonon+ instrument from the \verb+mcgui+.
+
 \subsection{The phonon cross section} % This is modified from the paper version %
 The inelastic phonon cross section for a Bravais crystal of a pure element
 is given by Ref.~\cite[ch.3~]{squires}
