--- a/trunk/sans.tex
+++ b/trunk/sans.tex
@@ -18,6 +18,8 @@ The difference in scattering length density
 (the contrast) between the hard spheres and the medium is called $\Delta \rho$.
 $d$ denotes the distance to the (presumed circular) SANS detector of radius $R$.
 
+A usage example of this component can be found in the \verb+Neutron site/tests/SANS+ instrument from the \verb+mcgui+.
+
 \subsection{Small-angle scattering cross section}
 The neutron intensity scattered into a solid angle $\Delta \Omega$
 for a flat isotropic SANS sample in transmission geometry
