--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -3,7 +3,9 @@
 \chapter{Instrument examples}
 \label{s:instrument}
 
-Here, we give a short description of three selected
+In this section, we present a few typical instruments.
+
+Then, we give a longer description of three selected
 instruments. We present the \MCS\ versions of
 the Ris\o\ standard triple axis spectrometer TAS1 (\ref{s:TAS1})
 and the ISIS time-of-flight spectrometer PRISMA (\ref{s:PRISMA}).
@@ -15,9 +17,50 @@ test instrument: the instrument to test the component
 %is listed in Appendix~\ref{instcode}.
 These instrument files are included in the \MCS\ distribution
 in the \verb+examples/+ directory.
-All the instrument examples there-in may be executed automatically throught the \MCS\ self-test procedure (see section~\ref{s:testing}).
+Most of the instrument examples there-in may be executed automatically throught the \MCS\ self-test procedure (see section~\ref{s:testing}).
 The list of instrument examples has been extended considerably, see
 the ``Neutron Site'' menu in mcgui (See page \ref{p:neutronsite}). 
+
+\section{A quick tour of instrument examples}
+\label{s:quick-tour-instr}
+
+\subsection{Neutron site: Brookhaven}
+
+The former Brookhaven reactor hosted the H8 triple-axis spectrometer. This latter was modelled in order to cross-check the NISP, Vitess, Restrax, McStas and IDEAS neutron propagation Monte Carlo codes. Results were published in Neutron News.
+
+\subsection{Neutron site: Tools}
+
+This caterory currently contains a special \verb+Histogrammer+ that can read any event file from Vitess, MCNP, tripoli and McStas in order to produce histograms of any type. This is a very powerful tool to analyse sparse huge events data sets.
+
+\subsection{Neutron site: ILL}
+
+Cold and thermal guide models are given in the ILL neutron site. Descriptions are very accurate, based on actual drawings, including all elements with curvature and gaps. Simulated capture fluxes were found in very good agreement with measurements.
+
+Additionally, the \verb+IN12+ triple-axis instrument has been detailed, in its year 2005 configuration. It is located at the end of the H15 cold guide. sample is a Vanadium rod.
+
+The \verb+IN6+ instrument is an hybrid time-of-flight with 3 monochromators and a Fermi chopper. Sample is an isotropic scatterer (liquid). It makes use of the SPLIT keyword to enhance statistics. 
+
+The \verb+ILL_TOF_Env+ example is a simple neutron pulse (e.g. from a chopper system coming out of IN5, IN4 or IN5) illuminating a sample, with a container around and a cylinder sphaped sample environment.
+
+\subsection{Neutron site: tests}
+
+This large set of examples shows simple instruments using particular components (samples, polarized beams, detectors). They may be used as starting point for further more complex descriptions.
+
+\subsection{Neutron site: ISIS}
+
+You will find here examples of ISIS instruments, some of them using the ISIS moderator component (obtained from MCNP computations).
+
+\subsection{Neutron site: Risoe}
+
+This section contains former Risoe instruments, which constitue the default test series for the \MCS\ distribution.
+
+\subsection{Neutron site: PSI}
+
+The Focus time-of-flight instrument is, with the ILL IN6 and IN12 models, the most advanced example. It as been built from drawings, including the guide and all optics elements. Simulated capture fluxes were found in good agreement with measurements.
+
+\subsection{Neutron site: Tutorial}
+
+A typical diffractometer including a powder sample and a Rescal-type triple-axis models are in this category. Instrument parameters enable models to cope with most existing instruments of these classes. The TAS model includes a basic in-plane UB-matrix transformation. It may be used to estimate the resolution functions of a TAS configuration.
 
 \section{A test instrument for the component V\_sample}
 \label{s:V-instr}
