--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -21,6 +21,8 @@ The component treats coherent and incoherent neutron scattering and may be used 
 The structure and dynamics of isotropic samples can be characterised by the dynamic structure factor $S(q,\omega)$, which determines the interaction between neutrons and the sample and therefore can be used as a probability distribution of $\omega$-energy and $q$-momentum transfers. It handles coherent and incoherent processes, both for elastic and inelastic interactions.
 The main input for the component is $S(q,\omega)$ tables, or powder structure files.
 
+Usage examples of this component can be found in the \verb+Neutron site/tests/Test_Isotropic_Sqw+, the \verb+Neutron site/ILL/ILL_H15_IN6+ and the \verb+ILL_TOF_Env+ instruments from the \verb+mcgui+.
+
 \subsection{Neutron interaction with matter - overview}
 
 When a neutron enters a material, according to usual models, it 'sees' atoms as disks with a surface equal to the total cross section of the material $\sigma_{tot}$. The latter includes absorption, coherent and incoherent contributions, which all depend on the incoming neutron energy.
