--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -527,6 +527,8 @@ Within a \texttt{GROUP}, \emph{all} \texttt{EXTEND} sections of the group are ex
 Components \emph{name1} and \emph{name2} are at the same position. If the first one intercepts the neutron (and has a SCATTER within its \texttt{TRACE} section), the SCATTERED variable becomes true, the code extension will result in printing "I scatter", and the second component will be skipped.
 Thus, we recommand to make use of the SCATTER keyword each time a component 'uses' the neutron (scatters, detects, \ldots) within component definitions (see section \ref{s:compdefs}).
 
+A usage example of the GROUP keyword can be found in the \verb+Neutron site/ILL/ILL_H15_IN6+ instrument from the \verb+mcgui+, to model 3 monochromators.
+
 \subsection{Duplication of component instances - COPY}
 \index{Keyword!COPY}
 \label{s:instrdefs-extend-copy}
@@ -608,6 +610,8 @@ The WHEN keyword only applies to the TRACE section of instruments/components. Ot
 
 Also, the \verb+WHEN+ keyword is a condition for \verb+GROUP+. This means that when the \verb+WHEN+ is false, the component instance is not active in the \verb+GROUP+ it belongs to.\index{Bugs}
 
+A usage example of the WHEN keyword can be found in the \verb+Neutron site/ILL/ILL_TOF_Env+ instrument from the \verb+mcgui+, to monitor neutron depending on their fate.
+
 \subsection{Component loops and non sequential propagation - JUMP}
 \index{Keyword!JUMP}
 \index{Keyword!ITERATE}
@@ -674,6 +678,8 @@ If some components make extensive use of random numbers (MC choices), they shuff
 
 where the optional number $r$ specifies the number of repetitions for each event. Default is $r=10$.
 Each neutron event reaching component {\it name} will be repeated $r$ times with a weight divided by $r$, so that in practice the number of events for the remaining part of the simulation (down to the END), will potentially have more statistics. This is only true if following components (and preferably component {\it name}) use random numbers. You may use this method as many times as you wish in the same instrument, e.g. at the monochromator and sample position. This keyword can also be used within a GROUP. The efficiency is roughtly $r$ raised to the number of occurences in the instrument, so that enhancing two components with the default $r=10$ will produce at the end an enhancement effect of 100 in the number of events. The execution time will usually get very slightly longer. This technique is known as the \emph{stratified sampling} (see Appendix \ref{s:MCtechniques}).
+
+A usage example of the SPLIT keyword can be found in the \verb+Neutron site/ILL/ILL_H15_IN6+ instrument from the \verb+mcgui+, to enhance statistics for neutrons scattering on monochromators and sample.
 
 \section{Writing component definitions}
 \label{s:compdefs}
