--- a/trunk/powderN.tex
+++ b/trunk/powderN.tex
@@ -11,6 +11,8 @@ with background coming only from incoherent scattering and no
 multiple scattering. The description of the powder comes from a
 file in one of the standard output formats LAZY, FULLPROF, or CRYSTALLOGRAPHICA.
 
+A usage example of this component can be found in the \verb+Neutron site/Tutorial/templateDIFF+ instrument from the \verb+mcgui+.
+
 \subsection{Files formats: powder structures}
 
 Data files of type \verb'lau' and \verb'laz' in the \MCS\ distribution data directory are self-documented in their header. A list of common powder definition files is available in Table \ref{t:powders-data} (page \pageref{t:powders-data}). They do not need any additional parameters to be used, as in the example:
