Added kernel call doc about randtriangle function
git-svn-id: https://svn.mccode.org/svn/McStasTeX@202 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -268,6 +268,7 @@ Details about using these functions are given in the \MCS\ User Manual.
   distribution centered around 0 and with $\sigma=1$. The algorithm used to
   sample the normal distribution is explained in Ref.~\cite[ch.7]{num_rep}.
 \item {\bf randpm1}(). Returns a random number distributed uniformly between -1 and 1.
+\item {\bf randtriangle}(). Returns a random number from a triangular distribution between -1 and 1. 
 \item {\bf randvec\_target\_circle}(\&$v_x$, \&$v_y$, \&$v_z$, \&$d\Omega$,
   aim$_x$, aim$_y$, aim$_z$, $r_f$). Generates a random vector $(v_x, v_y,
   v_z)$, of the same length as (aim$_x$, aim$_y$, aim$_z$), which is
