Added note about m<1 coating in FC comp.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@203 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/FermiChopper.tex
+++ b/trunk/FermiChopper.tex
@@ -151,7 +151,7 @@ If the neutron changes of slit channel at this point, we may determine the inter
 
 \subsubsection{The reflections (super-mirror slits)}
 
-If slit walls are reflecting, neutron is first propagated to the slit separating surface. Then the velocity in the rotating frame is computed using Eq. (\ref{eq:Txz}). Perpendicular velocity $v_x'$ is reverted for reflection, and inverse $T$ transformation is performed. Reflected intensity is computed the same way as for the guide component (see section \ref{s:mirror}). The remaining time $t_2$ to the slit output is estimated and the tangent intersection process is iterated, until neutron exits.
+If slit walls are reflecting, neutron is first propagated to the slit separating surface. Then the velocity in the rotating frame is computed using Eq. (\ref{eq:Txz}). Perpendicular velocity $v_x'$ is reverted for reflection, and inverse $T$ transformation is performed. Reflected intensity is computed the same way as for the guide component (see section \ref{s:mirror}). The remaining time $t_2$ to the slit output is estimated and the tangent intersection process is iterated, until neutron exits. Remember that that super mirror $m < 1$ parameters behave like $m=1$ materials (see section \ref{ss:mirrorreflect}).
 
 The propagation is finalized when determining the intersection of the neutron trajectory with the outer surface of the chopper cylinder. The neutron must then pass its aperture, else it is absorbed.
 
