Updated docs for PowderN
git-svn-id: https://svn.mccode.org/svn/McStasTeX@204 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/comp_abstract.tex
+++ b/trunk/comp_abstract.tex
@@ -134,7 +134,8 @@ Virtual\_output &  Detector-like component that writes neutron state
 %  Powder2      &  General powder sample with two
 %                scattering vectors. \\
   PowderN      &  General powder sample with N
-                scattering vectors, using a data file. \\
+                scattering vectors, using a data file. Can assume \emph{concentric} shape,
+		i.e. can be used to model sample enviroment.\\
   Sans\_spheres  & Simple sample for Small Angle Neutron Scattering - hard spheres \\
   Single\_crystal & Mosaic single crystal with multiple scattering vectors
                     using a data file. \\
