--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -18,7 +18,9 @@ performs both incoherent scattering and absorption.
 An important component class is elastic Bragg scattering from an ideal powder.
 The component {\bf PowderN} models a powder scatterer with reflections
 given in an input file.
-The component includes absorption and incoherent scattering.
+The component includes absorption, incoherent scattering, direct beam 
+transmission and can assume \emph{concentric} shape, i.e. can be used 
+for modelling sample enviroments.
 
 Next type is Bragg scattering from single crystals.
 The simplest single crystals are in fact the monochromator components
